# conan-libmpg123

./: .travis.yml  CMakeLists.txt  README.md  conandata.yml  conanfile.py
patches/: 0001-create-cmake-port.patch  0002-adjust-cmake-port.patch  0003-dont-build-executable.patch  0004-link-against-shlwapi.patch  0005-test.patch  0006-fix_mpg123_h_generation.patch  0007-fix_x86_build.patch
test_package/: test_package.cpp
